# various-code

./: addnum.asm  addnum.c  addnum.s  bingdict.vbs  connectmysql.c  fileoperation.c  helloglut.c  helloworld.asm  helloworld.s  keycode.c  memdump.c  multithreading.c  prime.asm  prime.c  prime.s  printenv.c  testmachinecode.c  testmousepos.c  testwin32.c  wiki.vbs  writebitmap.c
ASM/: .myhello.asm.swp  .myhi.c.swp  hello.asm  hellodos.asm  hellodosx.com  helloworld.asm  helloworld.c  hellox.asm  hi.asm  hix.asm  myhello.asm  myhi.asm  myhi.c  print.asm
CMakeDemo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeDemo.sln  CMakeDemo.vcxproj  CMakeDemo.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
CMakeDemo/CMakeDemo.dir/Debug/CMakeDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMakeDemo.lastbuildstate  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeDemo/Debug/: CMakeDemo.ilk
CMakeDemo/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
CMakeDemo/Win32/Debug/INSTALL/INSTALL.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
CMakeDemo/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
CMakeDemo/include/: hello.h
CMakeDemo/src/: helloworld.c
GAS/: hello.S  hello.asm
Interesting/: registerkeydemo.c
NASM/: hello.asm  hi.asm  (+1 more)
(+24 files in other folders)
