cmake_minimum_required (VERSION 2.6)
project (CMakeDemo)
set (PROJECT_DIR .)
set (PROJECT_INCLUDE_DIR ${PROJECT_DIR}/include)
set (PROJECT_SOURCE_DIR ${PROJECT_DIR}/src)
add_executable(CMakeDemo ${PROJECT_SOURCE_DIR}/helloworld.c)
include_directories (${PROJECT_INCLUDE_DIR})
install (TARGETS CMakeDemo DESTINATION bin)
install (FILES include/hello.h DESTINATION include)
